tests/compile/break-1.c
/**
RUN: %scc %s 2>&1 | filecheck %s
*/

int
main()
{
  // CHECK: error: break outside of loop or switch
  break;
}